# learning_docker

./: README.md  docker-compose.yml  pyproject.toml
DATA_PIPELINE/: app.py  arquivo.txt  docker-compose.yml  pyproject.toml
DATA_PIPELINE/dados_minio/.minio.sys/: format.json
DATA_PIPELINE/data_files/: status  uuid
DATA_PIPELINE/data_files/data/default/: tabela_teste
DATA_PIPELINE/data_files/data/my_database/: produtos
DATA_PIPELINE/data_files/data/system/: asynchronous_metric_log  error_log  latency_log  metric_log  part_log  processors_profile_log  query_log  text_log  trace_log
DATA_PIPELINE/data_files/metadata/: default  default.sql  my_database  my_database.sql  system  system.sql
DATA_PIPELINE/data_files/preprocessed_configs/: users.xml
DATA_PIPELINE/data_files/store/091/09112a2d-69e8-446c-9759-fdba60213631/: __marks.mrk  sizes.json
DATA_PIPELINE/data_files/store/6b8/6b8aa9e4-bdbf-4ab3-b56c-cf48efa97dfd/: produtos.sql
DATA_PIPELINE/data_files/store/9b3/9b33ea63-e3e0-4bd2-8d3b-6ed370a95cfc/: asynchronous_metric_log.sql  error_log.sql  latency_log.sql  metric_log.sql  processors_profile_log.sql  query_log.sql  text_log.sql  trace_log.sql
DATA_PIPELINE/data_files/store/d10/d10dc7d6-bf46-43da-a9bd-8d26fc1c4755/: tabela_teste.sql
DATA_PIPELINE/data_files/store/d67/d676e3a9-22e2-4695-a645-3974245f060f/: asynchronous_metric_log.sql  error_log.sql  latency_log.sql  metric_log.sql  part_log.sql  processors_profile_log.sql  query_log.sql  text_log.sql  trace_log.sql
NEW_PIPELINE/: Dockerfile  app.py  docker-compose.yml  pyproject.toml
(+17524 files in other folders)
