[project]
name = "projeto-teste"
version = "0.1.0"
description = ""
authors = [
    {name = "Kaio Felipe",email = "kaio.cavalcante.81651@a.fecaf.com.br"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "minio (>=7.2.16,<8.0.0)",
    "clickhouse-connect (>=0.8.18,<0.9.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
