[project]
name = "data-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Kaio Felipe",email = "kaio.cavalcante.81651@a.fecaf.com.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "data_pipeline", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
